--- a/app/src/main/res/layout/content_principal.xml
+++ b/app/src/main/res/layout/content_principal.xml
@@ -10,7 +10,7 @@
     tools:showIn="@layout/activity_principal">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/lstPersonas"
+        android:id="@+id/lstActividades"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
