--- a/app/src/main/res/layout/activity_detalle_persona.xml
+++ b/app/src/main/res/layout/activity_detalle_persona.xml
@@ -28,7 +28,7 @@
                 app:layout_collapseMode="pin"></android.support.v7.widget.Toolbar>
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/fotoE"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
@@ -124,12 +124,13 @@
     </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.FloatingActionButton
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:src="@android:drawable/ic_input_add"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="16dp"
         android:clickable="true"
-        android:focusable="true" />
+        android:focusable="true"
+        android:onClick="Eliminar"
+        android:src="@android:drawable/ic_input_add" />
 
 </android.support.design.widget.CoordinatorLayout>
